nxo_db running-ish

--- a/rebar.config
+++ b/rebar.config
@@ -3,7 +3,9 @@
 {erl_opts, [debug_info]}.
 
 {deps, [
-        {nxo_template, {git, "git://github.com/nxolib/nxo_template", {ref, "master"}}}
+        {nxo_template, {git, "git://github.com/nxolib/nxo_template", {ref, "main"}}}
+       ,{nxo_db,       {git, "git://github.com/nxolib/nxo_db",       {ref, "main"}}}
+       ,{sync, "0.2.0"}
        ]}.
 
 {relx, [{release, { myapp, {git, short}}, [myapp]},
